<resources>
    <string name="app_name">Virtual Jini</string>
    <string name="text_loading">Loading...</string>
    <string name="text_finished">Finished</string>
    <string name="copyright">Copyright 2017 - Virtual Jini. All Rights Reserved.</string>
    <string name="drawer_menu_home_text">Home</string>
    <string name="drawer_menu_my_posted_text">My Posted</string>
    <string name="drawer_menu_my_wish_list_text">My Wish List</string>
    <string name="drawer_menu_about_us_text">About Us</string>
    <string name="drawer_menu_contact_us_text">Contact Us</string>
    <string name="drawer_menu_faq_text">FAQ</string>
    <string-array name="drawer_menu_item_titles">
        <item>Home</item>
        <item>My Posted</item>
        <item>My Wish List</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>FAQ</item>
    </string-array>
    <string name="title_imagepicker">Gallery Photos</string>
    <string name="image_capture_1">Take Picture</string>
    <string name="image_capture">Pick from Gallery</string>
    <string name="image_pick_from_gallery">Default</string>
    <string name="cancel">Cancel</string>
    <string name="age">Age</string>
    <string name="error_invalid_phone_no">This phone number is invalid.</string>
    <string name="checkout">Checkout</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="review_order">Review Order</string>
    <string name="take_photo">Prescription View</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_share">Share Post</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pass">Forget Password</string>
    <string name="or">OR</string>
    <string name="no_account_yet_create_one">Create An Account</string>
    <string name="create_an_account">Create An Account</string>
    <string name="full_name">Full Name</string>
    <string name="your_address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_city">City</string>
    <string name="gender">Gender</string>
    <string name="registration">Sign Up</string>
    <string name="network_connection_disabled_title">There\'s no network connection.</string>
    <string name="network_connection_disabled_content">Please make sure you\'re connected to a WI-Fi or mobile network and try again.</string>
    <string-array name="list_of_cities">
        <item>Bagerhat</item>
        <item>Bandarban</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Bogra</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chapainababganj</item>
        <item>Chittagong</item>
        <item>Chuadanga</item>
        <item>Comilla</item>
        <item>Cox\'s bazar</item>
        <item>Dhaka</item>
        <item>Dinajpur</item>
        <item>Faridpur</item>
        <item>Feni</item>
        <item>Gaibandha</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Habiganj</item>
        <item>Jamalpur</item>
        <item>Jessore</item>
        <item>Jhalokati</item>
        <item>Jhenaidah</item>
        <item>Joypurhat</item>
        <item>Khagrachhari</item>
        <item>Khulna</item>
        <item>Kishoregonj</item>
        <item>Kurigram</item>
        <item>Kushtia</item>
        <item>Lakshmipur</item>
        <item>Lalmonirhat</item>
        <item>Madaripur</item>
        <item>Magura</item>
        <item>Manikganj</item>
        <item>Maulvibazar</item>
        <item>Meherpur</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Naogaon</item>
        <item>Narail</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Natore</item>
        <item>Netrakona</item>
        <item>Nilphamari</item>
        <item>Noakhali</item>
        <item>Pabna</item>
        <item>Panchagarh</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Rajbari</item>
        <item>Rajshahi</item>
        <item>Rangamati</item>
        <item>Rangpur</item>
        <item>Satkhira</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Sirajganj</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Tangail</item>
        <item>Thakurgaon</item>
    </string-array>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_miss_match_password">This password does not match.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_date_format">Invalid Date Format</string>
    <string name="error_amount">Do not have sufficient balance.</string>
    <string name="error_valid_coupon">Invalid coupon code</string>
    <string name="error_address_required">Please type a valid address.</string>
    <string name="error_pin">Please input correct verification pin.</string>
    <string name="error_invalid_date_format">"Invalid Date Format"</string>
    <string name="error_minimum_length_required_3">Minimum Required Character Length is 3.</string>
    <string name="error_minimum_length_required_11">Minimum Required Character Length is 11.</string>
    <string name="error_minimum_length_required_2">Minimum Required Character Length is 2.</string>
    <string name="error_minimum_length_required_4">Minimum Required Character Length is 4.</string>
    <string name="error_minimum_length_required_5">Minimum Required Character Length is 5.</string>
    <string name="error_minimum_length_required_6">Minimum Required Character Length is 6.</string>
    <string name="error_maximum_length_15">Maximum Character Length is 15.</string>
    <string name="error_maximum_length_10">Maximum Character Length is 10.</string>
    <string name="error_maximum_length_100">Maximum Character Length is 100.</string>
    <string name="error_maximum_length_50">Maximum Character Length is 50.</string>
    <string name="error_minimum_length_required_7">Minimum Required Character Length is 7.</string>
    <string name="error_minimum_length_required_9">Minimum Required Character Length is 9.</string>
    <string name="error_minimum_amount_required_1000">Minimum Required Amount is 1000.</string>
    <string name="error_invalid_age_bellow_18">Your age must have to 18+</string>
    <string name="invalid_gender">Invalid Gender, Please select from the List.</string>
    <string name="invalid_type">Invalid Type, Please select from the List.</string>
    <string name="invalid_gener">Invalid Type, Please select from the List.</string>
    <string name="invalid_city">Invalid City, Please select from the List.</string>
    <string name="forgot_password_text_title">Did you forgot your password?</string>
    <string name="forgot_password_text_description">Press ok button and soon you will get a pin code to reset your password.</string>
    <string name="development_address">http://nurdcoder.com</string>
    <string name="base_api">virtual_jini_api</string>
    <string name="production_address">http://nurdcoder.com</string>
    <string name="api_route_22">login</string>
    <string name="api_route_12">register</string>
    <string name="api_route_51">getAllPost</string>
    <string name="api_route_15">insertPost</string>
    <string name="network_connection_timeout_error">Timeout Error!!!</string>
    <string name="network_connection_timeout_error_msg">Connection TimeOut! Please check your internet connection.</string>
    <string name="network_connection_server_error_msg">The server could not be found. Please try again after some time.</string>
    <string name="network_connection_auth_error">Auth Failure Error!!!</string>
    <string name="network_connection_server_error">Server Error!!!</string>
    <string name="network_connection_parse_error">Parse Error!!!</string>
    <string name="network_connection_network_error">Network Error!!!</string>
    <string name="network_connection_unknown_error">Unknown Error!!!</string>
    <string name="login_error">Login attempt failed!</string>
    <string name="api_param_62">tag</string>
    <string name="api_param_63">mobile</string>
    <string name="api_param_64">password</string>
    <string name="api_param_72">name</string>
    <string name="api_param_76">gender</string>
    <string name="api_param_75">address</string>
    <string name="title_success">Success!!!</string>
    <string name="title_not_success">Not Success!!!</string>
    <string name="api_param_74">counter</string>
    <string name="api_param_61">tag</string>
    <string name="tolet_title">Tolet Title</string>
    <string name="tolet_type">Tolet Type</string>
    <string name="tolet_address_title">Tolet Address</string>
    <string name="rented_from_title">Rented From</string>
    <string name="rented_cost_title">Rent (BDT/month)</string>
    <string name="rented_size_title">Rented Size (in SQFT)</string>
    <string name="no_of_bedroom_title">No. of Bedroom</string>
    <string name="no_of_livingroom_title">No of Living Room</string>
    <string name="no_of_dyningroom_title">No. of Dining Room</string>
    <string name="no_of_carparking_title">No. of Car Parking</string>
    <string name="no_of_bathroom_title">No. of Bathroom</string>
    <string name="add_post_title">Create To-Let</string>
    <string name="edit_post_title">Update To-Let</string>
    <string name="api_param_47">tolet_title</string>
    <string name="api_param_27">tolet_address</string>
    <string name="api_param_45">tolet_rent</string>
    <string name="api_param_67">tolet_sqfeet</string>
    <string name="api_param_49">tolet_bed_room</string>
    <string name="api_param_87">tolet_bath_room</string>
    <string name="api_param_46">tolet_car_parking</string>
    <string name="api_param_81">tolet_living_room</string>
    <string name="api_param_84">tolet_dyning_room</string>
    <string name="api_param_48">tolet_type</string>
    <string name="api_param_44">tolet_from</string>
    <string name="api_param_26">uploader_id</string>
    <string name="api_param_94">title_image</string>
    <string name="api_param_69">title_image1</string>
    <string name="api_param_78">title_image2</string>
    <string name="api_param_18">title_image3</string>
    <string name="api_param_38">title_image4</string>
    <string name="api_param_83">title_image5</string>
    <string name="add_wishlist">Add To My Wishlist</string>
    <string name="remove_wishlist">Remove From My Wishlist</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="col">:</string>
    <string name="post_title_title">Title</string>
    <string name="post_type_title">Type</string>
    <string name="bed_room_title">Bed Room</string>
    <string name="bath_room_title">Bath Room</string>
    <string name="living_room_title">Living Room</string>
    <string name="dining_room_title">Dining Room</string>
    <string name="car_parking_title">Car Parking</string>
    <string name="address_title">Address</string>
    <string name="rent_title">Rent</string>
    <string name="size_title">Size</string>
    <string name="api_route_18">insertWishList</string>
    <string name="api_param_12">user_id</string>
    <string name="api_param_13">post_id</string>
    <string name="api_route_19">deleteMyWishList</string>
    <string name="api_route_20">deleteMyPost</string>
</resources>