<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_faq_parent_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/activity_login_lv_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/spacing_15dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight=".25"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/spacing_70dp"
                android:layout_height="@dimen/spacing_70dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/spacing_5dp"
            android:layout_weight=".12"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/activity_login_atv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="5dp"
            android:layout_weight=".12"
            android:textColorHint="@android:color/white"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/activity_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_login_btn_sign_in"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:layout_weight=".08"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/activity_login_tv_forgot_password"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:layout_weight=".15"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="@dimen/spacing_10dp"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:layout_weight=".10"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_2dp"
                android:layout_weight=".425"
                android:background="@android:color/white" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".15"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_2dp"
                android:layout_weight=".425"
                android:background="@android:color/white" />
        </LinearLayout>


        <TextView
            android:id="@+id/activity_login_tv_sign_up"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:layout_weight=".1"
            android:gravity="center"
            android:text="@string/no_account_yet_create_one"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>