<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/activity_registration_vll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_2dp"
                android:background="@color/c3"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_5dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_5dp"
                android:text="@string/create_an_account"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_5dp"
                android:layout_marginRight="@dimen/spacing_5dp"
                android:layout_marginTop="@dimen/spacing_5dp"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/activity_registration_atv_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_5dp"
                android:layout_marginRight="@dimen/spacing_5dp"
                android:layout_marginTop="@dimen/spacing_5dp"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/activity_registration_atv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_5dp"
                    android:layout_marginRight="@dimen/spacing_5dp"
                    android:layout_marginTop="@dimen/spacing_5dp"
                    android:layout_weight=".5"
                    android:textColorHint="@android:color/white">

                    <EditText
                        android:id="@+id/activity_registration_atv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_address"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_5dp"
                    android:layout_marginRight="@dimen/spacing_5dp"
                    android:layout_marginTop="@dimen/spacing_5dp"
                    android:layout_weight=".5"
                    android:textColorHint="@android:color/white">

                    <AutoCompleteTextView
                        android:id="@+id/activity_registration_atv_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_city"
                        android:imeOptions="actionNext"
                        android:textColor="@android:color/white"
                        android:inputType="text"
                        android:maxLength="24"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_5dp"
                    android:layout_marginRight="@dimen/spacing_5dp"
                    android:layout_marginTop="@dimen/spacing_5dp"
                    android:layout_weight=".5"
                    android:textColorHint="@android:color/white">

                    <AutoCompleteTextView
                        android:id="@+id/activity_registration_atv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:imeOptions="actionNext"
                        android:textColor="@android:color/white"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_5dp"
                android:layout_marginRight="@dimen/spacing_5dp"
                android:layout_marginTop="@dimen/spacing_5dp"
                android:textColorHint="@android:color/white"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/activity_registration_atv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_5dp"
                android:layout_marginRight="@dimen/spacing_5dp"
                android:layout_marginTop="@dimen/spacing_5dp"
                android:textColorHint="@android:color/white"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/activity_registration_atv_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/activity_registration_btn_register"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_10dp"
                android:layout_marginLeft="@dimen/spacing_5dp"
                android:layout_marginRight="@dimen/spacing_5dp"
                android:layout_marginTop="@dimen/spacing_10dp"
                android:background="@drawable/registration_button_background_selector"
                android:text="@string/registration"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
